# job-interview

./: .env  .env.example  Cargo.toml  README.md  docker-compose.yml
migrations/2021-02-03-212903_create_questions/: up.sql
migrations/2021-02-06-171726_create_interviews/: down.sql
migrations/2021-02-21-201428_create_users/: up.sql
server/: .env  Cargo.toml  README.md
server/migrations/2021-02-03-212903_create_questions/: up.sql
server/migrations/2021-02-06-171726_create_interviews/: up.sql
server/src/: graphql.rs  handlers.rs  schema.rs
server/src/auth/: managers.rs  models.rs  schema.rs
server/src/interviews/: models.rs
server/src/questions/: models.rs  schema.rs
server/src/users/: models.rs
src/: graphql.rs  lib.rs  main.rs  schema.rs
src/auth/: managers.rs  mod.rs  models.rs
src/interviews/: models.rs
src/questions/: models.rs
src/users/: models.rs  utils.rs
src/utils/: database.rs
webapp/: codegen.yml  package-lock.json  package.json
webapp/public/: index.html
webapp/src/: App.tsx  apollo.ts  generated-types.ts  index.css  index.tsx  types.ts
webapp/src/components/: index.ts
webapp/src/components/Button/: index.tsx
webapp/src/components/Editor/: index.tsx
webapp/src/components/HelperText/: index.tsx
webapp/src/components/Logo/: index.tsx
webapp/src/components/Navbar/: NavSignIn.tsx  index.tsx
webapp/src/graphql/: operations.graphql
webapp/src/hooks/: index.ts  useSignIn.ts  useUser.ts
webapp/src/settings/: index.ts  paths.ts
webapp/src/styles/: GlobalStyle.ts  styled.d.ts  theme.ts
(+12 files in other folders)
