[package]
name = "job-interview"
version = "0.1.0"
authors = ["ModPhoenix <ivanchenko.b@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "2.0.2"
actix-cors = "0.5.4"
env_logger = "0.8.2"
async-graphql = "2.5.2"
async-graphql-actix-web = "2.5.2"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
diesel = { version = "1.4.5", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
