[package]
name = "job-interview"
version = "0.1.0"
authors = ["ModPhoenix <ivanchenko.b@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "2.1.0"
actix-cors = "0.5.4"
env_logger = "0.8.3"
async-graphql = "2.5.12"
async-graphql-actix-web = "2.5.12"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
diesel = { version = "1.4.6", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
chrono = "0.4.19"

lazy_static = "1.4.0"

strum = "0.20"
strum_macros = "0.20"

rand = "0.8.3"
argon2rs = "0.2.5"
jsonwebtoken = "7.2.0"